KYLIN-5499 fix partition col format mismatch with type